// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render default - value[0] 1`] = `
<div
  style={
    Object {
      "width": "100%",
    }
  }
>
  <div
    className="skeleton {\\"style\\":{\\"marginBottom\\":\\"1rem\\"}}"
    style={
      Object {
        "height": "1.25rem",
        "width": "100%",
      }
    }
  />
  <div
    className="skeleton {\\"style\\":{\\"marginBottom\\":\\"1rem\\"}}"
    style={
      Object {
        "height": "1.25rem",
        "width": "100%",
      }
    }
  />
  <div
    className="skeleton {\\"style\\":{\\"marginBottom\\":\\"1rem\\"}}"
    style={
      Object {
        "height": "1.25rem",
        "width": "100%",
      }
    }
  />
  <div
    className="skeleton {\\"style\\":{\\"marginBottom\\":\\"1rem\\"}}"
    style={
      Object {
        "height": "1.25rem",
        "width": "40%",
      }
    }
  />
</div>
`;

exports[`Render lines1 - value[0] 1`] = `
<div
  style={
    Object {
      "width": "100%",
    }
  }
>
  <div
    className="skeleton {\\"style\\":{\\"marginBottom\\":\\"1rem\\"}}"
    style={
      Object {
        "height": "1.25rem",
        "width": "100%",
      }
    }
  />
</div>
`;

exports[`Render lines7 - value[0] 1`] = `
<div
  style={
    Object {
      "width": "100%",
    }
  }
>
  <div
    className="skeleton {\\"style\\":{\\"marginBottom\\":\\"1rem\\"}}"
    style={
      Object {
        "height": "1.25rem",
        "width": "100%",
      }
    }
  />
  <div
    className="skeleton {\\"style\\":{\\"marginBottom\\":\\"1rem\\"}}"
    style={
      Object {
        "height": "1.25rem",
        "width": "100%",
      }
    }
  />
  <div
    className="skeleton {\\"style\\":{\\"marginBottom\\":\\"1rem\\"}}"
    style={
      Object {
        "height": "1.25rem",
        "width": "100%",
      }
    }
  />
  <div
    className="skeleton {\\"style\\":{\\"marginBottom\\":\\"1rem\\"}}"
    style={
      Object {
        "height": "1.25rem",
        "width": "100%",
      }
    }
  />
  <div
    className="skeleton {\\"style\\":{\\"marginBottom\\":\\"1rem\\"}}"
    style={
      Object {
        "height": "1.25rem",
        "width": "100%",
      }
    }
  />
  <div
    className="skeleton {\\"style\\":{\\"marginBottom\\":\\"1rem\\"}}"
    style={
      Object {
        "height": "1.25rem",
        "width": "100%",
      }
    }
  />
  <div
    className="skeleton {\\"style\\":{\\"marginBottom\\":\\"1rem\\"}}"
    style={
      Object {
        "height": "1.25rem",
        "width": "40%",
      }
    }
  />
</div>
`;

exports[`Render width200 - value[0] 1`] = `
<div
  style={
    Object {
      "width": 200,
    }
  }
>
  <div
    className="skeleton {\\"style\\":{\\"marginBottom\\":\\"1rem\\"}}"
    style={
      Object {
        "height": "1.25rem",
        "width": "100%",
      }
    }
  />
  <div
    className="skeleton {\\"style\\":{\\"marginBottom\\":\\"1rem\\"}}"
    style={
      Object {
        "height": "1.25rem",
        "width": "100%",
      }
    }
  />
  <div
    className="skeleton {\\"style\\":{\\"marginBottom\\":\\"1rem\\"}}"
    style={
      Object {
        "height": "1.25rem",
        "width": "100%",
      }
    }
  />
  <div
    className="skeleton {\\"style\\":{\\"marginBottom\\":\\"1rem\\"}}"
    style={
      Object {
        "height": "1.25rem",
        "width": "40%",
      }
    }
  />
</div>
`;
